--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
-    <script src="coin collector.js"></script>
-    <script src="https://cdn.JsDelivr.net/gh/bmoren/p5.collide2D/p5.collide2d.min.js"></script>
+    <script src="olympic rings.js"></script>
   </head>
   <body>
     <main>
