--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
-    <script src="script.js"></script>
+    <script src="flip the switch.js"></script>
   </head>
   <body>
     <main>
