--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
-    <script src="coin collector.js"></script>
-    <script src="https://cdn.JsDelivr.net/gh/bmoren/p5.collide2D/p5.collide2d.min.js"></script>
+    <!-- Import p5.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js"></script>
+    <!-- Import p5.js collide 2D -->
+    <script src="https://cdn.jsdelivr.net/npm/p5.collide2d"></script>
+    <script src="path/to/p5.clickable.js"></script>
+
+    <meta charset="utf-8" />
   </head>
   <body>
-    <main>
-    </main>
+    <script src="script.js"></script>
   </body>
 </html>
