--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <!-- Import p5.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js"></script>
-    <meta charset="utf-8" />
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+    <script src="https://cdn.JsDelivr.net/gh/bmoren/p5.collide2D/p5.collide2d.min.js"></script>
+    <script src="raindrops.js"></script>
   </head>
   <body>
-    <script src="script.js"></script>
+    <main>
+    </main>
   </body>
 </html>
