--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Import p5.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js"></script>
-    
-    <!-- Import p5.js collide 2D -->
-    <script src="https://cdn.jsdelivr.net/npm/p5.collide2d"></script>
-    
-    <meta charset="utf-8" />
-  </head>
-  <body>
-    <script src="script.js"></script>
-  </body>
+<html>
+
+<head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
+  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+  <meta charset="utf-8" />
+
+</head>
+
+<body>
+  <script src="script.js"></script>
+</body>
+
 </html>
